Add Java 20 to CI and update Gradle
Add Java 20 to CI to ensure it can be built and address deprecations with
the URL class.
Update Gradle Wrapper to 8.2.1, plugins, and build.
Apply new formatting, required for newer Java versions.

Signed-off-by: thc202 <thc202@gmail.com>